--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -125,8 +125,8 @@
     "    for path in paths:\n",
     "        # Exercise I.3a: Implement the discounted return\n",
     "        # Hint: This can be done in one line using lfilter from scipy.signal,\n",
-    "        # but it might be much easier to write a separate function for this.\n",
-    "        path['returns'] = []\n",
+    "        # but it might be much easier to write a separate function for this\n",
+    "        path['returns'] = scipy.signal.lfilter([1], [1, float(-discount_rate)], path['rwd'][::-1], axis=0)[::-1]\n",
     "    baseline(paths)\n",
     "    for path in paths:\n",
     "        path['adv'] = path['returns'] - path['value']\n",
