--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continuous Policy Gradient Theorem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's examine the policy gradient theorem for continuous domains. Recall the reinforcement learning objective, which we write here in full:\n",
+    "\\begin{align}\n",
+    "J(\\theta)=\\int p_0(s)\\int \\pi_\\theta(a\\vert s) Q(a,s) da ds. \\label{eq:rl_objective}\n",
+    "\\end{align}\n",
+    "Just like in the discrete case (\\href{https://papers.nips.cc/paper/1713-policy-gradient-methods-for-reinforcement-learning-with-function-approximation.pdf}{Sutton et al. 2000}), we can take derivatives of objective with respect to the policy parameters $\\theta$, yielding:\n",
+    "\\begin{align}\n",
+    "\\nabla_\\theta J(\\theta)=\\int\\pi_\\theta(a_t\\vert s_t)\\int \\nabla_\\theta\\pi_\\theta(a\\vert s) Q(a,s) da ds ,\\label{eq:policy_gradient_theorem}\n",
+    "\\end{align} \n",
+    "where $\\pi_\\theta(a_t\\vert s_t)$ is the discounted ergodic occupancy measure. Using the log-derivative trick, we write \\cref{eq:policy_gradient_theorem} as an expectation over actions:\n",
+    "\\begin{align}\n",
+    "\\nabla_\\theta J(\\theta)=&\\int\\pi_\\theta(a_t\\vert s_t)\\int\\pi_\\theta(a\\vert s) \\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s) da ds,\\\\ =&\\mathbb{E}_{s\\sim\\pi_\\theta(a_t\\vert s_t),a\\sim\\pi_\\theta(a\\vert s)}\\Big[\\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s)\\Big].\\label{eq:score_policy_gradient_theorem}\n",
+    "\\end{align}\n",
+    "We then approximate the expectation by using $N$ samples from the environment under our policy $\\pi_\\theta(a\\vert s)$, giving:\n",
+    "\\begin{align}\n",
+    "\\nabla_\\theta J(\\theta)\\approx&\\frac{1}{N}\\sum_{n=0}^{N-1}\\sum_{t=0}^{T_N}\\nabla_\\theta\\log\\pi_\\theta(a_t\\vert s_t) Q(a_t,s_t).\n",
+    "\\end{align}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### REINFORCE and Baselines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a Monte-Carlo approximator for the action-value function, $Q(a_t,s_t)\\approx R_t\\triangleq\\sum_{i=t}^T r(a_i,s_i)$, we recover the REINFORCE (\\href{http://www-anw.cs.umass.edu/~barto/courses/cs687/williams92simple.pdf}{Williams 1992}) algorithm:\n",
+    "\\begin{align}\n",
+    "\\nabla_\\theta J(\\theta)\\approx&\\frac{1}{N}\\sum_{n=0}^{N-1}\\sum_{t=0}^{T_N}\\nabla_\\theta\\log\\pi_\\theta(a_t\\vert s_t) R_t.\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise I.1: Implementing REINFORCE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We choose our policy to be a linear Gaussian policy with parameters $\\theta$. Given state $s$, we can define some features $\\phi(s)$ and sample an action $a \\sim N(\\phi(s)^T \\theta, \\sigma^2)$. Our PointEnv environment is simple enough that we can use $\\phi(s) = s$. Note that $\\sigma^2$ can also depend on $s$, but we have kept it constant in Part I for simplicity. Policy gradient algorithms use the update rule $\\theta' = \\theta + \\alpha \\nabla_\\theta J(\\pi)$, where $\\alpha$ is the learning rate and $J(\\pi)$ is the expected return of the policy.\n",
+    "\n",
+    "I.1) In the function \"get\\_action\\_and\\_grad()\", sample an action from $\\pi_\\theta(a\\vert s)$ and compute the corresponding value of $\\nabla_\\theta\\log\\pi_\\theta(a\\vert s)$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +113,15 @@
     "\n",
     "    def get_action_and_grad(self, state):\n",
     "        # Exercise I.1:\n",
-    "        mean_act = []\n",
-    "        sampled_act = []\n",
-    "        grad_log_pi = []\n",
+    "        mean_act = ...\n",
+    "        sampled_act = ...\n",
+    "        grad_log_pi = ...\n",
     "        return sampled_act, grad_log_pi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +154,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise I.2: Using Baselines to Reduce Variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can subtract a baseline $V(s)$ from the action-value function, which does not affect the overall gradient, but will reduce variance in the gradient update. To see why, as $V_\\omega(s)\\triangleq\\mathbb{E}_{a\\sim\\pi_\\theta(a\\vert s)}[Q_\\omega(a,s)]$, the quantity $Q_\\omega(a,s)-V\\omega(s)$ will only be positive for $Q_\\omega(a,s)>V_\\omega(s)$, hence the gradient updates will therefore only be scaled by a positive value when an action has greater reward than the average return. For these reasons, we call $A_\\omega(a,s)=Q_\\omega(a,s)-V_\\omega(s)$ the advantage. For REINFORCE, $A_\\omega(a_t,s_t)=R_t-V_\\omega(s_t)$. Just like we define features $\\phi(s)$ for the policy, we can define some features $\\psi(s,t)$ for the value function. Our features are going to be $\\phi(s,t)=[s, s^2, t, t^2, t^3, 1]$ and we will approximate the value function as a linear function of these features, $V_\\omega (s_t)=\\omega^T\\phi(s,t)$\n",
+    "\n",
+    "I.2a) Given some sampled trajectories, fitting the value function is a linear regression problem.  The targets for our linear regression problem will therefore be the returns. The features have been implemented in the function \"baselines()\" you are required to compute the regression coefficients. Hint: The function \"np.linalg.lstsq\" may be of use.\n",
+    "\n",
+    "I.2b) Now calculate the value for each state in \\code{path} using the newly learnt coefficients and save it to \"path[`value']\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,15 +188,15 @@
     "    targets = np.concatenate([el['returns'] for el in paths])\n",
     "\n",
     "    # Exercise I.2(a): Compute the regression coefficents\n",
-    "    coeffs = []\n",
+    "    coeffs = ...\n",
     "    # Exercise I.2(b): Calculate the values for each state\n",
     "    for i, path in enumerate(paths):\n",
-    "        path['value'] = []"
+    "        path['value'] = ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +264,13 @@
     "# Exercise I.3(b): Run the algo again, but with traj_len=500.\n",
     "# Does the relative performance of learning using discount factors change?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
