--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -35,6 +35,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import BoundaryNorm\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "import numpy as np\n",
+    "\n",
+    "# make these smaller to increase the resolution\n",
+    "dx, dy = 0.05, 0.05\n",
+    "\n",
+    "# generate 2 2d grids for the x & y bounds\n",
+    "y, x = np.mgrid[slice(-5, 5 + dy, dy),\n",
+    "                slice(-5, 5 + dx, dx)]\n",
+    "\n",
+    "z = -np.sqrt(x**2 + y**2)\n",
+    "\n",
+    "# x and y are bounds, so z should be the value *inside* those bounds.\n",
+    "# Therefore, remove the last value from the z array.\n",
+    "z = z[:-1, :-1]\n",
+    "levels = MaxNLocator(nbins=15).tick_values(z.min(), z.max())\n",
+    "\n",
+    "\n",
+    "# pick the desired colormap, sensible levels, and define a normalization\n",
+    "# instance which takes data values and translates those into levels.\n",
+    "cmap = plt.get_cmap('spring')\n",
+    "norm = BoundaryNorm(levels, ncolors=cmap.N, clip=True)\n",
+    "\n",
+    "fig, ax0 = plt.subplots(nrows=1)\n",
+    "\n",
+    "im = ax0.pcolormesh(x, y, z, cmap=cmap, norm=norm)\n",
+    "fig.colorbar(im, ax=ax0)\n",
+    "ax0.set_title('Reward')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,13 +90,13 @@
     "\\begin{align}\n",
     "J(\\theta)=\\int p_0(s)\\int \\pi_\\theta(a\\vert s) Q(a,s) da ds. \\label{eq:rl_objective}\n",
     "\\end{align}\n",
-    "Just like in the discrete case (\\href{https://papers.nips.cc/paper/1713-policy-gradient-methods-for-reinforcement-learning-with-function-approximation.pdf}{Sutton et al. 2000}), we can take derivatives of objective with respect to the policy parameters $\\theta$, yielding:\n",
+    "Just like in the discrete case (https://papers.nips.cc/paper/1713-policy-gradient-methods-for-reinforcement-learning-with-function-approximation.pdf , (Sutton et al. 2000)), we can take derivatives of objective with respect to the policy parameters $\\theta$, yielding:\n",
     "\\begin{align}\n",
     "\\nabla_\\theta J(\\theta)=\\int\\pi_\\theta(a_t\\vert s_t)\\int \\nabla_\\theta\\pi_\\theta(a\\vert s) Q(a,s) da ds ,\\label{eq:policy_gradient_theorem}\n",
     "\\end{align} \n",
     "where $\\pi_\\theta(a_t\\vert s_t)$ is the discounted ergodic occupancy measure. Using the log-derivative trick, we write \\cref{eq:policy_gradient_theorem} as an expectation over actions:\n",
     "\\begin{align}\n",
-    "\\nabla_\\theta J(\\theta)=&\\int\\pi_\\theta(a_t\\vert s_t)\\int\\pi_\\theta(a\\vert s) \\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s) da ds,\\\\ =&\\mathbb{E}_{s\\sim\\pi_\\theta(a_t\\vert s_t),a\\sim\\pi_\\theta(a\\vert s)}\\Big[\\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s)\\Big].\\label{eq:score_policy_gradient_theorem}\n",
+    "\\nabla_\\theta J(\\theta)=&\\int\\pi_\\theta(a_t\\vert s_t)\\int\\pi_\\theta(a\\vert s) \\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s) da ds,\\\\ =&\\mathbb{E}_{s\\sim\\pi_\\theta(a_t\\vert s_t),a\\sim\\pi_\\theta(a\\vert s)}\\Big[\\nabla_\\theta\\log\\pi_\\theta(a\\vert s) Q(a,s)\\Big].\n",
     "\\end{align}\n",
     "We then approximate the expectation by using $N$ samples from the environment under our policy $\\pi_\\theta(a\\vert s)$, giving:\n",
     "\\begin{align}\n",
@@ -74,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a Monte-Carlo approximator for the action-value function, $Q(a_t,s_t)\\approx R_t\\triangleq\\sum_{i=t}^T r(a_i,s_i)$, we recover the REINFORCE (\\href{http://www-anw.cs.umass.edu/~barto/courses/cs687/williams92simple.pdf}{Williams 1992}) algorithm:\n",
+    "Using a Monte-Carlo approximator for the action-value function, $Q(a_t,s_t)\\approx R_t\\triangleq\\sum_{i=t}^T r(a_i,s_i)$, we recover the REINFORCE (http://www-anw.cs.umass.edu/~barto/courses/cs687/williams92simple.pdf ,(Williams 1992)) algorithm:\n",
     "\\begin{align}\n",
     "\\nabla_\\theta J(\\theta)\\approx&\\frac{1}{N}\\sum_{n=0}^{N-1}\\sum_{t=0}^{T_N}\\nabla_\\theta\\log\\pi_\\theta(a_t\\vert s_t) R_t.\n",
     "\\end{align}"
@@ -93,7 +134,7 @@
    "source": [
     "We choose our policy to be a linear Gaussian policy with parameters $\\theta$. Given state $s$, we can define some features $\\phi(s)$ and sample an action $a \\sim N(\\phi(s)^T \\theta, \\sigma^2)$. Our PointEnv environment is simple enough that we can use $\\phi(s) = s$. Note that $\\sigma^2$ can also depend on $s$, but we have kept it constant in Part I for simplicity. Policy gradient algorithms use the update rule $\\theta' = \\theta + \\alpha \\nabla_\\theta J(\\pi)$, where $\\alpha$ is the learning rate and $J(\\pi)$ is the expected return of the policy.\n",
     "\n",
-    "I.1) In the function \"get\\_action\\_and\\_grad()\", sample an action from $\\pi_\\theta(a\\vert s)$ and compute the corresponding value of $\\nabla_\\theta\\log\\pi_\\theta(a\\vert s)$."
+    "PROBLEM I.1) In the function \"get\\_action\\_and\\_grad()\", sample an action from $\\pi_\\theta(a\\vert s)$ and compute the corresponding value of $\\nabla_\\theta\\log\\pi_\\theta(a\\vert s)$."
    ]
   },
   {
@@ -166,9 +207,9 @@
    "source": [
     "We can subtract a baseline $V(s)$ from the action-value function, which does not affect the overall gradient, but will reduce variance in the gradient update. To see why, as $V_\\omega(s)\\triangleq\\mathbb{E}_{a\\sim\\pi_\\theta(a\\vert s)}[Q_\\omega(a,s)]$, the quantity $Q_\\omega(a,s)-V\\omega(s)$ will only be positive for $Q_\\omega(a,s)>V_\\omega(s)$, hence the gradient updates will therefore only be scaled by a positive value when an action has greater reward than the average return. For these reasons, we call $A_\\omega(a,s)=Q_\\omega(a,s)-V_\\omega(s)$ the advantage. For REINFORCE, $A_\\omega(a_t,s_t)=R_t-V_\\omega(s_t)$. Just like we define features $\\phi(s)$ for the policy, we can define some features $\\psi(s,t)$ for the value function. Our features are going to be $\\phi(s,t)=[s, s^2, t, t^2, t^3, 1]$ and we will approximate the value function as a linear function of these features, $V_\\omega (s_t)=\\omega^T\\phi(s,t)$\n",
     "\n",
-    "I.2a) Given some sampled trajectories, fitting the value function is a linear regression problem.  The targets for our linear regression problem will therefore be the returns. The features have been implemented in the function \"baselines()\" you are required to compute the regression coefficients. Hint: The function \"np.linalg.lstsq\" may be of use.\n",
+    "PROBLEM I.2a) Given some sampled trajectories, fitting the value function is a linear regression problem.  The targets for our linear regression problem will therefore be the returns. The features have been implemented in the function \"baselines()\" you are required to compute the regression coefficients. Hint: The function \"np.linalg.lstsq\" may be of use.\n",
     "\n",
-    "I.2b) Now calculate the value for each state in \\code{path} using the newly learnt coefficients and save it to \"path[`value']\""
+    "PROBLEM I.2b) Now calculate the value for each state in \\code{path} using the newly learnt coefficients and save it to \"path[`value']\""
    ]
   },
   {
@@ -244,7 +285,6 @@
     "                  'std_err': np.std(rwd, axis=1) / np.sqrt(runs)}\n",
     "    return perf_stats\n",
     "\n",
-    "\n",
     "gamma = [0.99, 0.995, 1.0]\n",
     "for g in gamma:\n",
     "    print(\"Starting algorithm with gamma:\", g)\n",
@@ -264,13 +304,6 @@
     "# Exercise I.3(b): Run the algo again, but with traj_len=500.\n",
     "# Does the relative performance of learning using discount factors change?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
