Fix part2 solution.

--- a/part_ii_solution.ipynb
+++ b/part_ii_solution.ipynb
@@ -17,7 +17,8 @@
     "from torch.distributions import Uniform\n",
     "from torch.distributions import Normal\n",
     "from torch.nn import functional as f\n",
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "import random"
    ]
   },
   {
@@ -33,6 +34,97 @@
    "source": [
     "\n",
     "[Pendulum problem](https://www.youtube.com/watch?v=1IoN6yCb21s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### storage.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Buffer:\n",
+    "    def __init__(self, buffer_size):\n",
+    "\n",
+    "        self.clear()\n",
+    "        self.buffer_size=buffer_size\n",
+    "\n",
+    "    def add(self,\n",
+    "            state,\n",
+    "            action,\n",
+    "            reward,\n",
+    "            next_state,\n",
+    "            terminal\n",
+    "            ):\n",
+    "\n",
+    "        if len(self.states) ==  self.buffer_size:\n",
+    "            self.clear_earliest_entry()\n",
+    "\n",
+    "        self.states.append(state)\n",
+    "        self.actions.append(action)\n",
+    "        self.rewards.append(reward)\n",
+    "        self.next_states.append(next_state)\n",
+    "        self.terminals.append(terminal)\n",
+    "\n",
+    "\n",
+    "    def clear(self):\n",
+    "\n",
+    "        self.states = []\n",
+    "        self.actions = []\n",
+    "        self.rewards = []\n",
+    "        self.next_states = []\n",
+    "        self.terminals = []\n",
+    "\n",
+    "\n",
+    "    def clear_earliest_entry(self):\n",
+    "\n",
+    "        self.states = self.states[1:]\n",
+    "        self.actions = self.actions[1:]\n",
+    "        self.rewards = self.rewards[1:]\n",
+    "        self.next_states = self.next_states[1:]\n",
+    "        self.terminals = self.terminals[1:]\n",
+    "\n",
+    "\n",
+    "    def random_batch(self, batch_size=None):\n",
+    "\n",
+    "        combined = list(zip(self.states,\n",
+    "                            self.actions,\n",
+    "                            self.rewards,\n",
+    "                            self.next_states,\n",
+    "                            self.terminals))\n",
+    "\n",
+    "        random.shuffle(combined)\n",
+    "\n",
+    "        if batch_size is not None:\n",
+    "            combined = combined[:batch_size]\n",
+    "\n",
+    "        states, actions, rewards, next_states, terminals = zip(*combined)\n",
+    "\n",
+    "        batch = {}\n",
+    "        batch['states'] = th.stack(states)\n",
+    "        batch['actions'] = th.stack(actions)\n",
+    "        batch['rewards'] = th.stack(rewards)\n",
+    "        batch['next_states'] = th.stack(next_states)\n",
+    "        batch['terminals'] = th.stack(terminals)\n",
+    "\n",
+    "        return batch\n",
+    "\n",
+    "    def whole_batch(self,):\n",
+    "\n",
+    "        batch = {}\n",
+    "        batch['states'] = th.stack(self.states)\n",
+    "        batch['actions'] = th.stack(self.actions)\n",
+    "        batch['rewards'] = th.stack(self.rewards)\n",
+    "        batch['next_states'] = th.stack(self.next_states)\n",
+    "        batch['terminals'] = th.stack(self.terminals)\n",
+    "\n",
+    "        return batch"
    ]
   },
   {
@@ -543,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +728,7 @@
     "render_agent = False\n",
     "\n",
     "# Set parameters\n",
-    "num_epochs = 5\n",
+    "num_epochs = 30\n",
     "num_pretrain_episodes = 1\n",
     "num_training_updates_per_epoch = 200\n",
     "lr = 3e-4\n",
